--- a/package.json
+++ b/package.json
@@ -8,9 +8,20 @@
         "lint:eslint": "eslint",
         "format:check": "prettier --check .",
         "format:write": "prettier --write .",
+        "lint:style": "stylelint '**/*.{css,scss}'",
         "dev": "vite",
         "build": "tsc -b && vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "test": "echo \"No tests specified\" && exit 0"
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx}": [
+            "eslint --fix",
+            "prettier --write"
+        ],
+        "*.{json,css,md}": [
+            "prettier --write"
+        ]
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.18",
@@ -34,6 +45,9 @@
         "globals": "^16.5.0",
         "husky": "^8.0.0",
         "prettier": "^3.8.1",
+        "stylelint": "^17.1.1",
+        "stylelint-config-standard": "^40.0.0",
+        "stylelint-config-tailwindcss": "^1.0.1",
         "typescript": "~5.9.3",
         "typescript-eslint": "^8.46.4",
         "vite": "^7.2.4"
