--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "eslint-plugin-react-refresh": "^0.4.24",
         "globals": "^16.5.0",
         "husky": "^8.0.0",
+        "lint-staged": "^16.2.7",
         "prettier": "^3.8.1",
         "stylelint": "^17.1.1",
         "stylelint-config-standard": "^40.0.0",
