feat: environment setup

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
         "format:check": "prettier --check .",
         "format:write": "prettier --write .",
         "lint:style": "stylelint '**/*.{css,scss}'",
-        "dev": "vite",
-        "build": "tsc -b && vite build",
-        "preview": "vite preview",
+        "dev": "vite --mode development",
+        "build": "tsc -b && vite build --mode production",
+        "preview": "vite preview --mode production",
         "test": "echo \"No tests specified\" && exit 0"
     },
     "lint-staged": {
