--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "stylelint": "^17.1.1",
         "stylelint-config-standard": "^40.0.0",
         "stylelint-config-tailwindcss": "^1.0.1",
+        "terser": "^5.46.0",
         "typescript": "~5.9.3",
         "typescript-eslint": "^8.46.4",
         "vite": "^7.2.4"
