feat: proxy setup

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 
 # Server Side - these variables will be available in the server side code not client side code.
 PORT="5173"
+BACKEND_URL="https://dummyjson.com/test"
 
 # Client Side - To use env variables in the client side code, they must be prefixed with VITE_.
 VITE_ENVIRONMENT="development" # "staging", "testing", "production".
