feat: unit testing setup with vitest

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "dev": "vite --mode development",
         "build": "tsc -b && vite build --mode production",
         "preview": "vite preview --mode production",
-        "test": "echo \"No tests specified\" && exit 0"
+        "test": "vitest --mode testing",
+        "test:watch": "vitest --mode testing --watch",
+        "test:coverage": "vitest --mode testing run --coverage"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": [
@@ -33,6 +35,8 @@
         "@commitlint/cli": "^20.4.1",
         "@commitlint/config-conventional": "^20.4.1",
         "@eslint/js": "^9.39.1",
+        "@testing-library/jest-dom": "^6.9.1",
+        "@testing-library/react": "^16.3.2",
         "@types/node": "^24.10.1",
         "@types/react": "^19.2.5",
         "@types/react-dom": "^19.2.3",
@@ -44,6 +48,7 @@
         "eslint-plugin-react-refresh": "^0.4.24",
         "globals": "^16.5.0",
         "husky": "^8.0.0",
+        "jsdom": "^28.0.0",
         "lint-staged": "^16.2.7",
         "prettier": "^3.8.1",
         "stylelint": "^17.1.1",
@@ -52,6 +57,7 @@
         "terser": "^5.46.0",
         "typescript": "~5.9.3",
         "typescript-eslint": "^8.46.4",
-        "vite": "^7.2.4"
+        "vite": "^7.2.4",
+        "vitest": "^4.0.18"
     }
 }
