feat: test coverage using vitest

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "preview": "vite preview --mode production",
         "test": "vitest --mode testing",
         "test:watch": "vitest --mode testing --watch",
-        "test:coverage": "vitest --mode testing run --coverage"
+        "test:coverage": "vitest run --coverage --mode testing"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": [
@@ -41,6 +41,7 @@
         "@types/react": "^19.2.5",
         "@types/react-dom": "^19.2.3",
         "@vitejs/plugin-react": "^5.1.1",
+        "@vitest/coverage-v8": "^4.0.18",
         "babel-plugin-react-compiler": "^1.0.0",
         "eslint": "^9.39.1",
         "eslint-config-prettier": "^10.1.8",
