--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,7 +22,7 @@ jobs:
                   node-version: '22'
 
             - name: Install dependencies
-              run: npm ci
+              run: npm install
 
             - name: Run eslint
               run: npm run lint:eslint
