--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -60,6 +60,7 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version: '22'
+                  cache: 'npm'
 
             - name: Install dependencies
               run: npm install
@@ -77,7 +78,7 @@ jobs:
               run: npm run build
 
             - name: Upload build artifacts
-              uses: actions/upload-artifact@v3
+              uses: actions/upload-artifact@v4
               with:
-                  name: dist
+                  name: dist-artifacts
                   path: dist
