--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         ]
     },
     "dependencies": {
+        "@sentry/react": "^10.38.0",
         "@tailwindcss/vite": "^4.1.18",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
@@ -35,6 +36,7 @@
         "@commitlint/cli": "^20.4.1",
         "@commitlint/config-conventional": "^20.4.1",
         "@eslint/js": "^9.39.1",
+        "@sentry/vite-plugin": "^4.9.1",
         "@testing-library/jest-dom": "^6.9.1",
         "@testing-library/react": "^16.3.2",
         "@types/node": "^24.10.1",
